# UMSKT

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Build.bat  Build_Windows.bat  CMakeLists.txt  Dockerfile  Dockerfile.djgpp  Dockerfile.emscripten  Dockerfile.windows  LICENSE  Makefile  README.md  Srv2003KGmain.cpp  _dummy.txt  cli.cpp  convert_keys_to_cpp.py  fully-licensed-wpa.txt  header.h  key.cpp  keys.json  main.cpp  server.cpp  server_algorithm.cpp  shared.cpp  shared.h  test.md  util.cpp  xp.cpp  xp_algorithm.cpp
.github/workflows/: c-cpp.yml  dos-djgpp.yml  freebsd.yml  linux.yml  macos.yml  windows-arm.yml  windows-arm64.yml  windows-x86-x64.yml  windows.yml
doc/: Vista+.md  dpc32_dump.csv  dpc64_dump.csv
extras/: GenerateCIDOffice0307.sage  bink_from_json.py  confid.ipynb  mpc_index.py  parse_dpcdll.py  parse_pubkey.py  pidgenx.ipynb  tspkgen.py  winxp_act.ipynb  wsrv_x64_lh_act.ipynb
extras/icon_sources/: README.txt
lib/: libcrypto.lib  libssl.lib
src/: BINK1998.cpp  BINK1998.h  BINK2002.cpp  BINK2002.h  cli.cpp  cli.h  confid.cpp  confid.h  generate.cpp  header.h  help.cpp  help.h  key.cpp  main.cpp  options.cpp  options.h  rc.cpp  server.cpp  typedefs.h  util.cpp  xp.cpp
src/cli/: cli.cpp  cli.h  confirmationid.cpp  help.cpp  options.cpp  pidgen.cpp
src/libumskt/: debugoutput.cpp  dllmain.cpp  init.cpp  libumskt.cpp  libumskt.h  libumskt_unittest.h  pidgen.cpp  pidgen.h
src/libumskt/confid/: confid.cpp  confid.h  confid_unittest.cpp  divisor.cpp  polynomial.cpp  residue.cpp
src/libumskt/pidgen2/: PIDGEN2.cpp  PIDGEN2.h  PIDGEN2_unittest.cpp
src/libumskt/pidgen3/: BINK1998.cpp  BINK1998.h  BINK1998_unittest.cpp  BINK2002.cpp  BINK2002.h  BINK2002_unittest.cpp  PIDGEN3.cpp  PIDGEN3.h  key.cpp  util.cpp
src/libumskt/sha1/: sha1.cpp  sha1.h
src/windows/: dllmain.cpp  icon_LICENSE  platform.cpp  resource.h  umskt.rc
